# docs/swagger.yaml
@@ -4,9 +4,6 @@ info:
     version: 1.0.0
 servers:
     -
-        url: 'https://kerliarendab.xyz'
-        description: Production server
-    -
         url: 'http://localhost:8080'
         description: Local development server
 paths:
@@ -19,65 +16,53 @@ paths:
                         schema:
                             $ref: '#/components/schemas/postUsersRequest'
                 required: true
-            tags:
-                - users
+            tags: []
             responses:
                 '201':
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/postUsersResponse'
+                                $ref: '#/components/schemas/userObject'
+                            examples:
+                                User has been created:
+                                    value:
+                                        id: 5f79d07a2fdeb07fb0c4d08c
+                                        name: Mari Maasikas
+                                        username: Mari37
+                                        accounts:
+                                            -
+                                                name: Main
+                                                balance: 10000
+                                                currency: EUR
+                                                number: ETCe89857b1
                     description: User has been created
                 '400':
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/errorResponse'
-                    description: 'Missing name, username or password'
+                            examples:
+                                Invalid password:
+                                    value:
+                                        error: Invalid password
+                                Invalid name:
+                                    value:
+                                        error: Invalid name
+                                Invalid username:
+                                    value:
+                                        error: Invalid username
+                    description: Bad request
+                '409':
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/errorResponse'
+                            examples:
+                                Username already exists:
+                                    value:
+                                        error: Username already exists
+                    description: Username already exists
             summary: Registers a new user
-    /sessions:
-        summary: Logging users in and out
-        post:
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/postSessionsRequest'
-                required: true
-            tags:
-                - sessions
-            responses:
-                '200':
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/postSessionsResponse'
-                    description: Session token has been created
-                '400':
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/errorResponse'
-                    description: Missing username or password
-                '401':
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/errorResponse'
-                    description: User does not exist or Wrong password
-            summary: Create new session token for user (login)
-        delete:
-            tags:
-                - sessions
-            responses:
-                '204':
-                    description: Session token has been deleted
-                '401':
-                    description: Unauthorized
-            security:
-                -
-                    Authorization: []
-            summary: Delete session token (log out)
 components:
     schemas:
         postUsersRequest:
@@ -90,7 +75,7 @@ components:
             type: object
             properties:
                 name:
-                    description: Users full name
+                    description: User`s full name
                     type: string
                 username:
                     description: Username
@@ -102,22 +87,59 @@ components:
                 name: Mari Maasikas
                 username: Mari37
                 password: mariparool
-        postUsersResponse:
-            title: POST /users response
-            description: User has been created
+        userObject:
+            title: userObject
+            description: ''
             type: object
+            properties:
+                id:
+                    description: User´s ID
+                    type: string
+                name:
+                    description: User`s full name
+                    type: string
+                username:
+                    description: Username
+                    type: string
+                accounts:
+                    description: Array of user`s bank accounts
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/accountObject'
             example:
+                id: 5f79bab312c4877b900f9a55
+                name: Mars
+                username: Mari2
                 accounts:
                     -
                         name: Main
                         balance: 10000
                         currency: EUR
-                        number: ETC2837b9f5
-                        id: 5f78daea8115366e94a72349
-                name: Mari Maasikas
-                username: Mari37
-                password: $2b$10$p/974Tq.4J77wooMv4dsIenhBVZjOn84baS1mXoSV.ND28DlFGuvS
-                id: 5f78daea8115366e94a72348
+                        number: ETC0e861235
+                        id: 5f79bab412c4877b900f9a56
+        accountObject:
+            title: accountObject
+            description: ''
+            type: object
+            properties:
+                name:
+                    description: Account name
+                    type: string
+                balance:
+                    format: int32
+                    description: Funds the account holds
+                    type: integer
+                currency:
+                    description: Funds currency
+                    type: string
+                number:
+                    description: Account number
+                    type: string
+            example:
+                name: Main
+                balance: 10000
+                currency: EUR
+                number: ETCed019ead
         errorResponse:
             title: a generic error response
             description: Generic error response
@@ -127,70 +149,3 @@ components:
                     type: string
             example:
                 error: Error message
-        postSessionsRequest:
-            title: POST /sessions request
-            description: ''
-            type: object
-            properties:
-                username:
-                    type: string
-                password:
-                    type: string
-            example:
-                username: Juku123
-                password: minuparool
-        postSessionsResponse:
-            title: POST /sessions response
-            description: Session has been created
-            required: []
-            type: object
-            properties:
-                user:
-                    type: object
-                    properties:
-                        _id:
-                            type: string
-                        name:
-                            type: string
-                        username:
-                            type: string
-                        password:
-                            type: string
-                        sessions:
-                            type: array
-                            items:
-                                type: object
-                                properties:
-                                    _id:
-                                        type: string
-                                    token:
-                                        type: string
-                        __v:
-                            format: int32
-                            type: integer
-            example:
-                user:
-                    _id: 5f722d1ddaadbd5aa0d8ca26
-                    name: uus
-                    username: uus
-                    password: $2a$08$MENfm2v4A1M8fWKd7ExyFu2QCTLfvWLG0XMA/CXwmYyaHdaMFu.Iq
-                    sessions:
-                        -
-                            _id: 5f722d2adaadbd5aa0d8ca27
-                            token: >-
-                                eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI1ZjcyMmQxZGRhYWRiZDVhYTBkOGNhMjYiLCJpYXQiOjE2MDEzMTgxODZ9.HABqtzBwtnVxnIoI16ZTNpgklX72-dYHALTL2GDHy58
-                    __v: 1
-        deleteSessionsRequest:
-            title: DELETE /sessions request
-            description: ''
-            type: object
-            properties:
-                Authorization:
-                    type: string
-            example:
-                Authorization: >-
-                    eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJfaWQiOiI1ZjcyMmQxZGRhYWRiZDVhYTBkOGNhMjYiLCJpYXQiOjE2MDEzMTgxODZ9.HABqtzBwtnVxnIoI16ZTNpgklX72-dYHALTL2GDHy58
-    securitySchemes:
-        Authorization:
-            scheme: bearer
-            type: http
